--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           submodules: "true"
       - name: Build ${{ env.CONTAINER_ID }}
-        run: bash ops/docker_build.sh
+        run: bash ops/docker_build.sh ${{ env.CONTAINER_ID }}
 
   clang-tidy:
     name: Run clang-tidy
@@ -45,9 +45,7 @@ jobs:
         with:
           submodules: "true"
       - name: Fetch container from cache
-        run: bash ops/docker_build.sh
-        env:
-          CONTAINER_ID: xgb-ci.clang_tidy
+        run: bash ops/docker_build.sh xgb-ci.clang_tidy
       - run: bash ops/pipeline/run-clang-tidy.sh
 
   python-mypy-lint:
