--- a/ops/docker/ci_container.yml
+++ b/ops/docker/ci_container.yml
@@ -14,6 +14,13 @@ xgb-ci.gpu_build_rockylinux8:
     NCCL_VERSION_ARG: "2.23.4-1"
     RAPIDS_VERSION_ARG: *rapids_version
 
+xgb-ci.gpu_build_rockylinux8_dev_ver:
+  container_def: gpu_build_rockylinux8
+  build_args:
+    CUDA_VERSION_ARG: "12.4.1"
+    NCCL_VERSION_ARG: "2.23.4-1"
+    RAPIDS_VERSION_ARG: *dev_rapids_version
+
 xgb-ci.gpu_build_r_rockylinux8:
   container_def: gpu_build_r_rockylinux8
   build_args:
