--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,44 +12,10 @@ concurrency:
 env:
   BRANCH_NAME: >-
     ${{ github.event.pull_request.number && 'PR-' }}${{ github.event.pull_request.number || github.ref_name }}
-  USE_DOCKER_CACHE: 1
 
 jobs:
-  build-containers:
-    name: Build CI containers (${{ matrix.container_id }})
-    runs-on:
-      - runs-on
-      - runner=${{ matrix.runner }}
-      - run-id=${{ github.run_id }}
-      - tag=main-build-containers-${{ matrix.container_id }}
-    strategy:
-      matrix:
-        container_id:
-          - xgb-ci.gpu_build_rockylinux8
-          - xgb-ci.gpu_build_rockylinux8_dev_ver
-          - xgb-ci.gpu_build_r_rockylinux8
-          - xgb-ci.gpu
-          - xgb-ci.cpu
-          - xgb-ci.manylinux_2_28_x86_64
-          - xgb-ci.manylinux2014_x86_64
-        runner: [linux-amd64-cpu]
-        include:
-          - container_id: xgb-ci.manylinux2014_aarch64
-            runner: linux-arm64-cpu
-          - container_id: xgb-ci.aarch64
-            runner: linux-arm64-cpu
-    steps:
-      # Restart Docker daemon so that it recognizes the ephemeral disks
-      - run: sudo systemctl restart docker
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Build ${{ matrix.container_id }}
-        run: bash ops/docker_build.sh ${{ matrix.container_id }}
-
   build-cpu:
     name: Build CPU
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-amd64-cpu
@@ -60,15 +26,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.cpu
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: bash ops/pipeline/build-cpu.sh
       - name: Stash CLI executable
         run: bash ops/pipeline/stash-artifacts.sh stash build-cpu ./xgboost
 
   build-cpu-arm64:
     name: Build CPU ARM64 + manylinux_2_28_aarch64 wheel
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-arm64-cpu
@@ -79,8 +44,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.aarch64
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: bash ops/pipeline/build-cpu-arm64.sh
       - name: Stash files
         run: |
@@ -93,7 +58,6 @@ jobs:
 
   build-cuda:
     name: Build CUDA + manylinux_2_28_x86_64 wheel
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-amd64-cpu
@@ -104,10 +68,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.gpu_build_rockylinux8
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.manylinux_2_28_x86_64
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: bash ops/pipeline/build-cuda.sh
       - name: Stash files
         run: |
@@ -123,7 +85,6 @@ jobs:
 
   build-cuda-with-rmm:
     name: Build CUDA with RMM
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-amd64-cpu
@@ -134,10 +95,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.gpu_build_rockylinux8
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.manylinux_2_28_x86_64
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: |
           bash ops/pipeline/build-cuda-with-rmm.sh xgb-ci.gpu_build_rockylinux8
       - name: Stash files
@@ -151,7 +110,6 @@ jobs:
 
   build-cuda-with-rmm-dev:
     name: Build CUDA with RMM (dev)
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-amd64-cpu
@@ -162,16 +120,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.gpu_build_rockylinux8_dev_ver
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.manylinux_2_28_x86_64
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: |
           bash ops/pipeline/build-cuda-with-rmm.sh xgb-ci.gpu_build_rockylinux8_dev_ver
 
   build-manylinux2014:
     name: Build manylinux2014_${{ matrix.arch }} wheel
-    needs: build-containers
     runs-on:
       - runs-on
       - runner=${{ matrix.runner }}
@@ -191,8 +146,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.manylinux2014_${{ matrix.arch }}
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: bash ops/pipeline/build-manylinux2014.sh ${{ matrix.arch }}
       - name: Upload Python wheel
         run: |
@@ -204,7 +159,6 @@ jobs:
 
   build-gpu-rpkg:
     name: Build GPU-enabled R package
-    needs: build-containers
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=linux-amd64-cpu
@@ -215,8 +169,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.gpu_build_r_rockylinux8
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - run: bash ops/pipeline/build-gpu-rpkg.sh
       - name: Upload R tarball
         run: |
@@ -253,8 +207,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh xgb-ci.gpu
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - name: Unstash gtest
         run: |
           bash ops/pipeline/stash-artifacts.sh unstash ${{ matrix.artifact_from }}  \
@@ -300,8 +254,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh ${{ matrix.container }}
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
       - name: Unstash Python wheel
         run: |
           bash ops/pipeline/stash-artifacts.sh unstash ${{ matrix.artifact_from }} \
