--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -84,6 +84,7 @@ jobs:
           submodules: "true"
       - run: bash ${{ matrix.script }}
       - name: Upload libxgboost4j.dylib
+        if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
         run: |
           mv -v lib/libxgboost4j.dylib ${{ matrix.libname }}
           python3 ops/pipeline/manage-artifacts.py upload \
@@ -186,11 +187,10 @@ jobs:
           mvn test -B -pl :xgboost4j_2.12
       - name: Publish artifact xgboost4j.dll to S3
         run: |
-          cd lib/
-          Rename-Item -Path xgboost4j.dll -NewName xgboost4j_${{ github.sha }}.dll
-          python -m awscli s3 cp xgboost4j_${{ github.sha }}.dll `
-            s3://xgboost-nightly-builds/${{ env.BRANCH_NAME }}/libxgboost4j/ `
-            --acl public-read --region us-west-2
+          python ops/pipeline/manage-artifacts.py upload \
+            --s3-bucket xgboost-nightly-builds \
+            --prefix ${{ env.BRANCH_NAME }}/${{ github.sha }} --make-public \
+            lib/xgboost4j.dll
         if: |
           (github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')) &&
           matrix.os == 'windows-latest'
