--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,9 +33,9 @@ jobs:
         shell: powershell
         run: |
           conda activate
-          python3 ops/pipeline/manage-artifacts.py upload \
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
-            --prefix cache/${{ github.run_id }}/build-win64-gpu \
+          python3 ops/pipeline/manage-artifacts.py upload `
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} `
+            --prefix cache/${{ github.run_id }}/build-win64-gpu `
             (Get-ChildItem python-package/dist/*.whl | Select-Object -Expand FullName)
 
   test-win64-gpu:
@@ -53,9 +53,9 @@ jobs:
         shell: powershell
         run: |
           conda activate
-          python3 ops/pipeline/manage-artifacts.py download \
-            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} \
-            --prefix cache/${{ github.run_id }}/build-win64-gpu \
-            --dest-dir python-package/dist \
+          python3 ops/pipeline/manage-artifacts.py download `
+            --s3-bucket ${{ env.RUNS_ON_S3_BUCKET_CACHE }} `
+            --prefix cache/${{ github.run_id }}/build-win64-gpu `
+            --dest-dir python-package/dist `
             *.whl
       - run: powershell ops/pipeline/test-win64-gpu.ps1
