--- a/ops/docker/dockerfile/Dockerfile.aarch64
+++ b/ops/docker/dockerfile/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 FROM quay.io/pypa/manylinux_2_28_aarch64
 
-SHELL ["/bin/bash", "-c"]   # Use Bash as shell
+SHELL ["/bin/bash", "-c"]
 
 # Install all basic requirements
 RUN \
