--- a/ops/conda_env/macos_cpu_test.yml
+++ b/ops/conda_env/macos_cpu_test.yml
@@ -11,7 +11,7 @@ dependencies:
 - numpy
 - scipy
 - llvm-openmp
-- scikit-learn>=1.4.1,<=1.5.2
+- scikit-learn>=1.4.1
 - pandas
 - matplotlib
 - dask<=2024.10.0
