--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -174,6 +174,7 @@ jobs:
       - runner=${{ matrix.runner }}
       - run-id=${{ github.run_id }}
       - tag=main-test-cpp-gpu-${{ matrix.suite }}
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -213,6 +214,7 @@ jobs:
       - runner=${{ matrix.runner }}
       - run-id=${{ github.run_id }}
       - tag=main-test-python-wheel-${{ matrix.description }}
+    timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
