[CI] Use precise terminology for image components

--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -247,10 +247,10 @@ jobs:
       matrix:
         variant:
           - name: cpu
-            container_id: xgb-ci.jvm
+            image_repo: xgb-ci.jvm
             artifact_from: build-test-jvm-packages
           - name: gpu
-            container_id: xgb-ci.jvm_gpu_build
+            image_repo: xgb-ci.jvm_gpu_build
             artifact_from: build-jvm-gpu
         scala_version: ['2.12', '2.13']
     steps:
@@ -272,4 +272,4 @@ jobs:
       - name: Deploy JVM packages to S3
         run: |
           bash ops/pipeline/deploy-jvm-packages.sh ${{ matrix.variant.name }} \
-            ${{ matrix.variant.container_id }} ${{ matrix.scala_version }}
+            ${{ matrix.variant.image_repo }} ${{ matrix.scala_version }}
