Build R docs with pkgdown.
install dir.

Restore.

system dependencies.

Update ubuntu version.

work on script.

use r image. [skip ci]

disable for now

skip examples [skip ci]

witchcraft. [skip ci]

vig.

ref.

ref.

ref.

all?

Revert "all?"

This reverts commit 6208a1a88128ddc7187ccd277f2358c600c7a700.

note.

Different xgboost.

use commit hash.

add path.

Note.

note.

Install.

Fixes.

release branch.

cleanup.

registry.

Try to trigger.

Disable for now.

Fix.

setup.

test.

auth.

Move the notes.

ep.

debug.

debug.

debug.

debug.

debug.

Print revoked token.

debug.

use env.

redact?

debug.

test another one.

Fix.

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -2,6 +2,13 @@ name: XGBoost-docs
 
 on: [push, pull_request]
 
+permissions:
+  contents: read  # to fetch code (actions/checkout)
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 env:
   BRANCH_NAME: >-
     ${{ github.event.pull_request.number && 'PR-' }}${{ github.event.pull_request.number || github.ref_name }}
@@ -31,6 +38,28 @@ jobs:
             --s3-bucket xgboost-docs \
             --prefix ${BRANCH_NAME}/${GITHUB_SHA} --make-public \
             jvm-packages/${{ env.BRANCH_NAME }}.tar.bz2
+
+  build-r-docs:
+    name: Build docs for the R package
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - runner=linux-amd64-cpu
+      - tag=r-tests-build-docs
+    steps:
+      # Restart Docker daemon so that it recognizes the ephemeral disks
+      - run: sudo systemctl restart docker
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+      - name: Log into Docker registry (AWS ECR)
+        run: bash ops/pipeline/login-docker-registry.sh
+      - run: bash ops/pipeline/build-r-docs.sh
+      - name: Upload R doc
+        run: |
+          python3 ops/pipeline/manage-artifacts.py upload \
+            --s3-bucket xgboost-docs \
+            --prefix ${BRANCH_NAME}/${PR_COMMIT_SHA} --make-public \
+            r-docs-${{ env.BRANCH_NAME }}.tar.bz2
 
   trigger-rtd-build:
     needs: [build-jvm-docs]
