[WIP] Small cleanup for the jvm interface.
Fix create jni.

serialization.

lint.

cleanup.

[wip][jvm-packages] Add java class for `ExtMemQdm`.

cleanup.

cleanup.

Debug build.

Fix CPU build.

Cleanup.

--- a/jvm-packages/xgboost4j/pom.xml
+++ b/jvm-packages/xgboost4j/pom.xml
@@ -100,6 +100,8 @@
                             <argument>${use.cuda}</argument>
                             <argument>--use-openmp</argument>
                             <argument>${use.openmp}</argument>
+                            <argument>--use-debug</argument>
+                            <argument>${use.debug}</argument>
                           </arguments>
                           <workingDirectory>${user.dir}</workingDirectory>
                           <skip>${skip.native.build}</skip>
